# cmake-presets-set-compiler-option

./: README.md
src/: CMakeLists.txt  CMakePresets.json  main.cpp
